Remove support and privacy routes

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "PokerDegen",
-  "name": "PokerDegen Support",
+  "name": "PokerDegen",
   "icons": [
     {
       "src": "favicon.ico",
